--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,10 +4,10 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
+  --breakpoint-xs: 30rem;
+  
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -51,8 +51,8 @@
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(0.205 0 0);
-  --primary-foreground: oklch(0.985 0 0);
+  --primary: #ff0270;
+  --primary-foreground: #000000;
   --secondary: oklch(0.97 0 0);
   --secondary-foreground: oklch(0.205 0 0);
   --muted: oklch(0.97 0 0);
@@ -85,8 +85,8 @@
   --card-foreground: oklch(0.985 0 0);
   --popover: oklch(0.205 0 0);
   --popover-foreground: oklch(0.985 0 0);
-  --primary: oklch(0.922 0 0);
-  --primary-foreground: oklch(0.205 0 0);
+  --primary: #ff0270;
+  --primary-foreground: #000000;
   --secondary: oklch(0.269 0 0);
   --secondary-foreground: oklch(0.985 0 0);
   --muted: oklch(0.269 0 0);
@@ -118,5 +118,40 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+@utility frame {
+  width: 100%;
+  margin-inline: auto;
+  padding-inline: 1rem;
+
+  @variant xs {
+    padding-inline: 1.5rem;
+  }
+
+  @variant sm {
+    max-width: 40rem;
+    padding-inline: 2rem;
+  }
+
+  @variant md {
+    max-width: 48rem;
+    padding-inline: 3rem;
+  }
+
+  @variant lg {
+    max-width: 64rem;
+    padding-inline: 4rem;
+  }
+
+  @variant xl {
+    max-width: 80rem;
+    padding-inline: 5rem;
+  }
+
+  @variant 2xl {
+    max-width: 96rem;
+    padding-inline: 6rem;
   }
 }
