--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -155,3 +155,34 @@
     padding-inline: 6rem;
   }
 }
+
+@utility post-frame {
+  width: 100%;
+  margin-inline: auto;
+  padding-inline: 1rem;
+
+  @variant sm {
+    max-width: 42.5rem;
+    padding-inline: 1.5rem;
+  }
+
+  @variant md {
+    max-width: 42.5rem;
+    padding-inline: 2rem;
+  }
+
+  @variant lg {
+    max-width: 42.5rem;
+    padding-inline: 3rem;
+  }
+
+  @variant xl {
+    max-width: 42.5rem;
+    padding-inline: 4rem;
+  }
+
+  @variant 2xl {
+    max-width: 42.5rem;
+    padding-inline: 5rem;
+  }
+}
